chore: add nullness defaults and guidelines
Document boundary suppression for Spring APIs and apply NonNull defaults
across common/app/masterdata packages, including tests.